[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-devops-mcp-servers"
version = "1.0.0"
description = "MCP servers for Smart DevOps CI/CD pipeline orchestration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "chainlit>=1.0.0",
]

[project.scripts]
mcp-jira       = "mcp_servers.jira:main"
mcp-jenkins    = "mcp_servers.jenkins:main"
mcp-nexus      = "mcp_servers.nexus:main"
mcp-bitbucket  = "mcp_servers.bitbucket:main"
mcp-sonarqube  = "mcp_servers.sonarqube:main"
mcp-coverity   = "mcp_servers.coverity:main"
mcp-blackduck  = "mcp_servers.blackduck:main"
mcp-gateway    = "mcp_servers.gateway:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers"]
